argocd/manifests/matrix-synapse/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: matrix-synapse
  labels:
    app.kubernetes.io/name: matrix-synapse
    app.kubernetes.io/managed-by: argocd
