argocd/manifests/matrix-synapse/base/service-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: matrix-postgres
  namespace: matrix-synapse
spec:
  type: ClusterIP
  selector:
    app: matrix-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
      protocol: TCP
